# soramimic-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/instructions/: general.instructions.md
.github/scripts/: update_version.sh
.github/workflows/: ci.yml  publish.yml  update-version-auto.yml  update-version-manual.yml
manual_tests/: conftest.py
manual_tests/unit/: test_soramimic.py
scripts/: setup.sh
src/project_name/: schemas.py
src/soramimic/: __init__.py  character.py  english.py  factory.py  kana_similarity.py  kana_to_syllable.py  maker.py  samples.py  text_analyzer.py  tokenizer.py  utils.py  word_list.py
src/soramimic/data/: english-kana.LICENSE  english-kana.json  kana2phonon.json  simConsonantsMonoTie.json  simVowelsMonoTie.json  tree_roma2kana.json
src/soramimic/data/samples/: README.md  nations.csv  sekitsui.csv  stations.csv
src/soramimic/tokenizers/: __init__.py  mecab.py
src/soramimic_python/: schemas.py
src/soramimic_python/core/: aligner.py  allocator.py  character.py  english.py  kana_similarity.py  kana_to_syllable.py  loader.py  mecab_tokenizer.py  number.py  roma2kana.py  soramimic.py  text_analyzer.py  utils.py  wordlist.py
src/soramimic_python/core/pronouncer/: __init__.py  base.py  english_pronouncer.py  kana_pronouncer.py  kanji_pronouncer.py  number_pronouncer.py
src/soramimic_python/utils/: __init__.py  logging_config.py
template/manual_tests/: conftest.py
template/src/template_package/: schemas.py
template/src/template_package/utils/: helpers.py  logging_config.py
template/tests/: conftest.py
tests/: conftest.py  helpers.py  test_character.py  test_english.py  test_factory.py  test_golden.py  test_kana_similarity.py  test_kana_to_syllable.py  test_maker.py  test_samples.py  test_text_analyzer.py  test_word_list.py
tests/golden/: format_kana.json  format_tokens_list.json  generate_from_tokens.json  generate_from_tokens_monotie.json  get_candidates.json  kana_similarity_samples.json  kana_to_syllable.json  wordlist_plain.json  wordlist_tidy_all.json  wordlist_tidy_category_food.json  wordlist_tidy_category_food_or_category_gadget.json  wordlist_tidy_category_station.json  wordlist_tidy_no_pronunciation.json  yomi_and_phrase_break.json
tests/integration/: test_soramimic.py
tests/unit/: test_character.py  test_english.py  test_kana_to_syllable.py  test_mecab_tokenizer.py  test_text_analyzer.py  test_wordlist.py
tools/: generate_golden.mjs
