[project]
name = "soramimic"
version = "0.1.2"
description = "Soramimi (phonetic parody) lyrics generator — Python port of the Soramimic engine"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jiro Shimaya" }]
requires-python = ">=3.10"
dependencies = []
keywords = ["soramimi", "japanese", "lyrics", "phonetics", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: Japanese",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Repository = "https://github.com/soramimic/soramimic-python"
Issues = "https://github.com/soramimic/soramimic-python/issues"

[project.optional-dependencies]
mecab = ["fugashi>=1.3", "ipadic>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.9"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501", # 移植元JSとの対応を優先し長い行を許容
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = false
